@@ -30,6 +30,7 @@ To the Python package:
 * sfbatch: script for submitting jobs to a cluster queue system 
 * Changed MPIRUN from a command-line option to a configure option
 * Updated sunrpc configuration for the current version of Cygwin on Windows
+* vpannotate: interactive wrapper for annotations with sfbox
 
 To programs:
 
